--- a/style.css
+++ b/style.css
@@ -528,7 +528,7 @@ form h3 {
 }
 
 .services__container {
-  background: url(../img/bg__services.png)no-repeat top center;
+  background: url(img/bg__services.png)no-repeat top center;
   background-size: cover;
   padding: 120px 0;
 }
