--- a/style.css
+++ b/style.css
@@ -787,9 +787,9 @@ footer p {
 }
 
 .popup {
-  position: fixed;
+  position: absolute;
   top: 10%;
-  left: 50%;
+  left: 50%; 
   margin-left: -200px;
   z-index: 99999;
   opacity: 1;
